--- a/arcoiris.html
+++ b/arcoiris.html
@@ -3,16 +3,17 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>L'arc de Sant Martí</title>
-    <link rel="stylesheet" href="style.css">
+    <title>Arc de Sant Martí</title>
 </head>
 <body>
-    <p class="roig">roig</p>
-    <p class="naranja">naranja</p>
-    <p class="yellow">yellow</p>
-    <p class="verd">verd</p>
-    <p class="azul">azul</p>
-    <p class="indigo">indigo</p>
-    <p class="violeta">violeta</p>
+    <h3>Arc de Sant Martí</h3>
+    <p onmousemove="this.style.color='red'" onmouseout="this.style.color='black'">roig, red, rojo</p>
+    <p onmousemove="this.style.color='orange'" onmouseout="this.style.color='black'">taronja, orange, naranja</p>
+    <p onmousemove="this.style.color='yellow'" onmouseout="this.style.color='black'">groc, yellow, amarillo</p>
+    <p onmousemove="this.style.color='green'" onmouseout="this.style.color='black'">verd, green, verde</p>
+    <p onmousemove="this.style.color='aqua'" onmouseout="this.style.color='black'">blau clar, light blue, azul claro</p>
+    <p onmousemove="this.style.color='blue'" onmouseout="this.style.color='black'">blau, blue, azul</p>
+    <p onmousemove="this.style.color='purple'" onmouseout="this.style.color='black'">morat, purple, morado</p>
+
 </body>
 </html>
