--- a/arcoiris.html
+++ b/arcoiris.html
@@ -1,12 +1,17 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="es">
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Arc de Sant Martí</title>
+    <script>
+        function myFunction() {
+            var 
+        }
+    </script>
 </head>
 <body>
-    <h3>Arc de Sant Martí</h3>
+    <h3 ondblclick="myFunction()">Arc de Sant Martí</h3>
     <p onmousemove="this.style.color='red'" onmouseout="this.style.color='black'">roig, red, rojo</p>
     <p onmousemove="this.style.color='orange'" onmouseout="this.style.color='black'">taronja, orange, naranja</p>
     <p onmousemove="this.style.color='yellow'" onmouseout="this.style.color='black'">groc, yellow, amarillo</p>
